[tool.poetry]
authors = ["Saito Tsutomu <tsutomu7@hotmail.co.jp>"]
description = "Litestar sample"
name = "app"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
litestar = {extras = ["sqlalchemy", "standard"], version = "^2.5.1"}
aiosqlite = "^0.19.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.mypy]
ignore_missing_imports = true
