[tool.poetry]
authors = ["Saito Tsutomu <tsutomu7@hotmail.co.jp>"]
description = "Litestar sample"
name = "app"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aiosqlite = "^0"
litestar = {extras = ["sqlalchemy", "standard"], version = "^2.5"}
python = "^3.12"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.mypy]
ignore_missing_imports = true
