[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
dependencies = [
  "aiosqlite>=0.20.0",
  "litestar[sqlalchemy,standard]>=2.14.0",
]
description = "Litestar sample"
license = {text = "Apache-2.0"}
name = "app"
readme = "README.md"
requires-python = ">=3.12"
version = "0.2.0"

[tool.mypy]
files = "."
ignore_missing_imports = true

[tool.ruff.lint]
ignore = ["CPY", "D", "E501"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
